[package]
name = "ironsea_store_mapped_file"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Memory mapped file I/O implementation for the Iron Sea database toolkit."
homepage = "https://crates.io/crates/ironsea_store_mapped_file"
repository = "https://github.com/epfl-dias/ironsea_store_mapped_file"
readme = "README.md"

keywords = []
categories = ["database-implementations", "data-structures"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[dependencies]
ironsea_store = "^0.1"
memmap = "^0.7"

